# pyarc2

./: .gitignore  .readthedocs.yml  Cargo.toml  MANIFEST.in  README.md  build-linux-wheels-2_24.sh  build-linux-wheels-2_28.sh  build-linux-wheels.sh  build-win32-wheels.bat  build-win32-wheels.ps1  getbl-win32.py  pyproject.toml  releasecheck.py
.github/workflows/: wheels.yml
docs/: api.rst  conf.py  index.rst  overview.rst  protocol.rst  upload.py
pyarc2/: __init__.py  _types.py  pyarc2.pyi
src/: lib.rs
