[tool.poetry]
name = "pyarc2"
version = "0.1.0"
authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
description = "High level Python bindings for the libarc2 library"

include = ["src/*", "Cargo.toml", "tests/*"]
exclude = ["pyarc2/*so", "pyarc2/*dll"]

[tool.poetry.dependencies]
python = ">=3.7"
pip = "^20.1"

[tool.poetry.dev-dependencies]
wheel = "*"
maturin = "^0.11"
delvewheel = [{ version = "^0.0.15", platform = 'win32' }]

[build-system]
requires = ["poetry-core>=1.0.1", "setuptools", "wheel", "maturin>=0.11"]
build-backend = "maturin"
