[tool.poetry]
name = "pyarc2"
version = "0.3.0"
description = "High level Python bindings for the libarc2 library"
authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]

#include = ["src/*", "Cargo.toml", "tests/*"]
#exclude = ["pyarc2/*so", "pyarc2/*dll", "pyarc2/*pyd"]

[project]
name = "pyarc2"
version = "0.3.0"
description = "High level Python bindings for the libarc2 library"
readme = "README.md"
authors = [
  { name = "Spyros Stathopoulos <spyros@arc-instruments.co.uk>"},
  { email = "spyros@arc-instruments.co.uk" }
]
homepage = "http://arc-instruments.co.uk/"
repository = "https://github.com/arc-instruments/pyarc2"
license = { text = "MPL-2.0" }

requires-python = ">=3.9"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: Microsoft :: Windows :: Windows 8",
  "Operating System :: Microsoft :: Windows :: Windows 8.1",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "numpy>=1.18"
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.18"

[tool.poetry.dev-dependencies]
wheel = "*"
maturin = "^1.0"
delvewheel = [{ version = "^0.0.22", platform = 'win32' }]

[build-system]
requires = ["setuptools", "wheel", "maturin>=1.0,<2.0"]
build-backend = "maturin"
