[project]
name = "pyarc2"
version = "0.6.2-a0"
description = "High level Python bindings for the libarc2 library"
readme = "README.md"
authors = [
  { name = "Spyros Stathopoulos", email = "spyros@arc-instruments.co.uk" }
]
license = "MPL-2.0"
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.18"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows :: Windows 8",
  "Operating System :: Microsoft :: Windows :: Windows 8.1",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "http://arc-instruments.co.uk/"
Repository = "https://github.com/arc-instruments/pyarc2"

[tool.poetry.group.dev.dependencies]
wheel = "*"
maturin = "^1.0"
delvewheel = [{ version = "^0.0.22", platform = 'win32' }]

[build-system]
requires = ["setuptools", "wheel", "maturin>=1.0,<2.0"]
build-backend = "maturin"
